css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}
/* COMMON */
.padding-20{
    padding: 20px;
}
.container{
    width: 100%;
}
.row{
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    padding: 0 20px;
}
.f-right{
    float: right;
}
.border-radius-25{
    border-radius: 25px;
}
.txt-center{
    text-align: center;
    color: white;
}
.btn{
    border: none;
    border-radius: 25px;
    padding: 10px 20px;
    font-weight: 500;
}

/* column */
.col-50{
    width: 50%;
}
.col-100{
    width: 100%;
    margin: 10px 00px;
}

/* COMMON TO REMOVE */
/* color's */
.bg-blue{
    background-color: #B5DDFF;
}
.bg-purple{
    background-color: #9792E4;
}
.bg-white{
    background-color: #fff;
    color: black;
}
.btn-blue{
    background-color: #0084FD;
    color: white;
}
/* HEADER */
header{
    width: 100%;
    background-color: #0084FD;
    color: white;
    padding: 10px 0;
}
.hidden{
    display: none;
}
header i{
    font-size: 30px;
}

/* first section of main */
.content-col h2{
    color: #0084FD;
    margin: 20px 0;
}
.content-col p{
    color: #5A6E7F;
    font-size: 18px;
    line-height: 1.8;
    font-weight: 500;
    margin: 10px 0;
}
.content-col .btn{
    font-size: 20px;
    letter-spacing: 3px;
    padding: 10px 50px;
    margin: 20px 0;
}
.content-col img{
    width: 100%;
}
/* Second section of main */
.icons{
    color: #0084FD;
    font-size: 100px;
}

/* FOOTER */
footer{
    background-color: #333333;
}

/* MEDIA QUERY */
/* media query for tablet device */
@media screen and (min-width: 768px) {
    /* to fix firts section */
    .col-33{
        width: calc(100% / 3 - 20px);
        margin: 10px;
    }
    .col-66{
        width: calc(100% / 3 * 2 - 20px);
        margin: 10px;
    }

    /* to fix section with six column */
    .col-50-media{
        width: calc(100% / 2 - 20px);
        margin: 10px;
    }
}
/* media query for desktop device */
@media screen and (min-width: 1200px) {
    .container{
        max-width: 1200px;
        margin: 0 auto;
    }
    /* header */
    .show{
        display: none;
    }
    .hidden{
        display: block;
    }
    .hidden ul{
        display: flex;
        list-style: none;
        padding-top: 10px;
    }
    .hidden ul li{
        padding: 0 10px;
    }
    .hidden li a{
        text-decoration: none;
        color: white;
    }
    
    /* to fix second section */
    .col-50{
        width: calc(100% / 2 - 20px);
        margin: 10px;
    }
    /* to fix fourth section */
    .col-33{
        width: calc(100% / 3 - 20px);
        margin: 10px;
    }
}

